lab3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab3-front
  labels:
    app: lab3-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lab3-front
  template:
    metadata:
      labels:
        app: lab3-front
    spec:
      containers:
        - name: lab3-front
          image: ifilyaninitmo/itdt-contained-frontend:master
          ports:
            - containerPort: 3000
