lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-frontend-ingress
spec:
  rules:
    - host: lab3.frontend.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab3-frontend-service
                port:
                  number: 8200
  tls:
    - hosts:
        - lab3.frontend.org
      secretName: tls-secret
